langtools/test/tools/javac/processing/6994946/SyntaxErrorTest.out
SyntaxErrorTest.java:12:10: compiler.err.expected: ';'
1 error
